# Checktex

./: CMakeLists.txt  checktex.cpp  checktex.hpp  tests.cpp
